apache-depl.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apache-deployment
  namespace: apache

spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache

  template:
    metadata:
      labels:
        app: apache

    spec:
      containers:
        - name: apache
          image: httpd:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 261Mi
